# os-dev

./: README.MD  boot_sect.asm  kernel.c  makefile  print_hex.asm  print_string.asm  switch_pm.asm
WaOiR/: Cargo.toml  README.MD  main.rs
WaOiR/.cargo/: config
WaOiR/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
WaOiR/tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
WaSOS/: README.MD  boot_sect.asm  disk_load.asm  gdt.asm  main.elf  main.img  makefile  os-image
WaSOS/string/: print_string.asm  print_string_pm.asm
hex/: print_hex.asm
