[package]
name = "os"
version = "0.1.0"
authors = ["DeltaManiac <maxpaynered@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader="*"
volatile = "*"
spin = "0.5.2"
[dependencies.lazy_static]
version= "1.0"
features = ["spin_no_std"]
