[package]
name = "divios"
version = "0.1.0"
authors = ["DeltaManiac <maxpaynered@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial","stdio", "-display",
"none"]
test-success-exit-code = 33 #(0x10<<1) | 1

[[test]]
name = "stack_overflow"
harness=false

[[test]]
name = "should_panic"
harness=false

[dependencies]
bootloader="*"
volatile = "*"
spin = "0.5.2"
x86_64 = "0.8.1"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version= "1.0"
features = ["spin_no_std"]
